<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cours Manager</string>
    <string name="action_settings">Settings</string>
    <string name="btnAdd">Add</string>
    <string name="ueAddError">Error while creating the UE</string>
    <string name="subjectAddError">Error while creating the subject</string>
    <string name="lessonAddError">Error while creating the lesson</string>
    <string name="folderAddError">Error while creating the folder</string>
    <string name="ueAddGood">UE created</string>
    <string name="subjectAddGood">Subject created</string>
    <string name="lessonAddGood">Lesson created</string>
    <string name="folderAddGood">Folder created</string>
    <string name="titleAddUE">Add a new UE</string>
    <string name="titleAddSubject">Add a new Subject</string>
    <string name="titleAddLesson">Add a new Lesson</string>
    <string name="titleAddFolder">Add a new folder</string>
    <string name="cancel">Cancel</string>
    <string name="defaultNameUE">UE name</string>
    <string name="defaultNameSubject">Subject name</string>
    <string name="defaultNameLesson">Lesson name</string>
    <string name="defaultNameTeach">Teacher name</string>
    <string name="defaultNameFolder">Folder name</string>
    <string name="askDelete">Do you really want to remove it ?</string>
    <string name="askImport">Do you really want to replace your datas by imported datas ?</string>
    <string name="askExport">Do you really want to save and erase your current save ?</string>
    <string name="askFinished">Have you really finished this lesson ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="finish">Finished</string>
    <string name="deleteAll">Delete all</string>
    <string name="confirmDeleteAll">Do you really want to delete everything ?</string>
    <string name="name">Name</string>
    <string name="editionPost">Post-Card edition</string>
    <string name="first">It\'s the first post-card</string>
    <string name="last">It\'s the last post-card</string>
    <string name="navigationReReading">Rereading</string>
    <string name="navigationPost" translatable="false">Post-Cards</string>
    <string name="navigationDetails">Details</string>
    <string name="textGoal">Details</string>
    <string name="noPostCard">No post-card available</string>
    <string name="exit">Do you really want to exit ?</string>
    <string name="rename">Rename</string>
    <string name="orderBy">Order by</string>
    <string name="dateCreation">Creation date</string>
    <string name="nameAsc">Ascending name</string>
    <string name="nameDesc">Descending name</string>
    <string name="importDatas">Import</string>
    <string name="exportDatas">Export</string>
    <string name="imported">Datas imported</string>
    <string name="exported">Datas exported</string>
    <string name="notAccess">Access denied, accept the permissions</string>
    <string name="cantFindFile">Can\'t find the file</string>
    <string name="selectFirstJ">Select second revision …</string>
    <string name="selectRythm">Select rhythm …</string>
    <string name="jMethod">J Method</string>
    <string name="rereadingMethod">Simple Rereading</string>
    <string name="toDo">To do</string>
    <string name="nothingToDo">Nothing to do</string>
    <string name="done">Done</string>
    <string name="nextRead">Next read :</string>
    <string name="lessonFinished">Lesson finished</string>
    <string name="changeMethod">Change method</string>
    <string name="jToRead">J Method to Simple reading ?</string>
    <string name="readToJ">Simple reading to J Method ?</string>
    <string name="reRead">Re-Read</string>

    <string name="title_activity_subject" translatable="false">SubjectActivity</string>
    <string name="title_activity_lesson" translatable="false">LessonActivity</string>
    <string name="title_activity_lesson_details" translatable="false">LessonDetailsActivity</string>
    <string name="title_activity_custom_dialog" translatable="false">CustomDialog</string>
    <string name="title_activity_post_cards" translatable="false">PostCardsActivity</string>
    <string name="title_activity_edition_post_card" translatable="false">EditionPostCardActivity</string>
    <string name="title_activity_play_post_card" translatable="false">PlayPostCardActivity</string>
    <string name="theme">Theme</string>
    <string name="title_activity_lesson_detail_post" translatable="false">LessonDetailPostActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_shuffle_post_card" translatable="false">ShufflePostCardActivity</string>
    <string name="lessonAddFields">Incorrect fields</string>
</resources>
