<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.coursmanager.app.view.MainActivity">
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="1"
        android:title="@string/deleteAll"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="2"
        android:title="@string/orderBy"
        android:icon="@drawable/ic_order_by"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import"
        android:orderInCategory="3"
        android:title="@string/importDatas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:orderInCategory="4"
        android:title="@string/exportDatas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="5"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
