<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#ECECEC">

    <RadioGroup
        android:id="@+id/groupOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/orderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dateCreation"
            android:layout_gravity="center"/>
        <RadioButton
            android:id="@+id/orderNameAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nameAsc"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
        <RadioButton
            android:id="@+id/orderNameDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nameDesc"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    </RadioGroup>
</LinearLayout>