<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="#3E80B4"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/no"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/yes"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>